# CrossRoad

./: .travis.yml  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h  system.h
server/: CMakeLists.txt  Trafficlight.cpp  recognitionVehicle.cpp  server.cpp
клиент/: Engine.h  main.cpp  system.cpp
сервер/: TrafficLightPins.h  Trafficlight.h  main.cpp  recognitionVehicle.h  server.h
